# nhl-rs

./: .gitignore  Cargo.toml  readme.md  sample.json  sample_schedule.json  sample_standings.json  update-readme
.github/: copilot-instructions.md
src/: main.rs  schedule.rs  standings.rs  team_schedule.rs
